@@ -23,12 +23,13 @@ import static org.junit.Assert.assertEquals;
 import static org.junit.Assert.assertThat;
 import static org.junit.Assert.fail;
 
-import com.facebook.buck.io.ProjectFilesystem;
+import com.facebook.buck.io.filesystem.ProjectFilesystem;
 import com.facebook.buck.model.BuildTarget;
 import com.facebook.buck.rules.BuildRule;
 import com.facebook.buck.rules.BuildTargetSourcePath;
 import com.facebook.buck.rules.ExplicitBuildTargetSourcePath;
 import com.facebook.buck.rules.FakeBuildRule;
+import com.facebook.buck.rules.FakeSourcePath;
 import com.facebook.buck.rules.PathSourcePath;
 import com.facebook.buck.rules.SourcePath;
 import com.facebook.buck.rules.modern.InputPath;
@@ -175,7 +176,7 @@ public class FieldTypeInfosTest {
     FieldTypeInfo<InputPath> typeInfo =
         FieldTypeInfoFactory.forFieldTypeToken(new TypeToken<InputPath>() {});
 
-    PathSourcePath sourcePath = new PathSourcePath(filesystem, Paths.get("path"));
+    PathSourcePath sourcePath = FakeSourcePath.of(filesystem, "path");
     InputPath value = new InputPath(sourcePath);
     EasyMock.expect(inputRuleResolver.resolve(value)).andReturn(Optional.empty());
 
@@ -194,7 +195,7 @@ public class FieldTypeInfosTest {
 
     BuildTarget target = BuildTarget.of(Paths.get("some"), "//some", "name");
     BuildRule rule = new FakeBuildRule(target, ImmutableSortedSet.of());
-    BuildTargetSourcePath sourcePath = new ExplicitBuildTargetSourcePath(target, Paths.get("path"));
+    BuildTargetSourcePath sourcePath = ExplicitBuildTargetSourcePath.of(target, Paths.get("path"));
 
     InputPath value = new InputPath(sourcePath);
     EasyMock.expect(inputRuleResolver.resolve(value)).andReturn(Optional.of(rule));
@@ -215,7 +216,7 @@ public class FieldTypeInfosTest {
 
     BuildTarget target = BuildTarget.of(Paths.get("some"), "//some", "name");
     BuildRule rule = new FakeBuildRule(target, ImmutableSortedSet.of());
-    BuildTargetSourcePath sourcePath = new ExplicitBuildTargetSourcePath(target, Paths.get("path"));
+    BuildTargetSourcePath sourcePath = ExplicitBuildTargetSourcePath.of(target, Paths.get("path"));
 
     InputPath inputPath = new InputPath(sourcePath);
     Optional<InputPath> value = Optional.of(inputPath);
@@ -252,10 +253,10 @@ public class FieldTypeInfosTest {
     BuildTarget target = BuildTarget.of(Paths.get("some"), "//some", "name");
     BuildRule rule = new FakeBuildRule(target, ImmutableSortedSet.of());
     BuildTargetSourcePath targetSourcePath =
-        new ExplicitBuildTargetSourcePath(target, Paths.get("path"));
+        ExplicitBuildTargetSourcePath.of(target, Paths.get("path"));
     InputPath targetInputPath = new InputPath(targetSourcePath);
 
-    PathSourcePath pathSourcePath = new PathSourcePath(filesystem, Paths.get("path"));
+    PathSourcePath pathSourcePath = FakeSourcePath.of(filesystem, "path");
     InputPath pathInputPath = new InputPath(pathSourcePath);
     ImmutableList<InputPath> value = ImmutableList.of(targetInputPath, pathInputPath);
 
